--- a/index.html
+++ b/index.html
@@ -7,6 +7,54 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <h1>My Book Library</h1>
+  
+    <!-- Button to open the form -->
+    <button id="newBookBtn">New Book</button>
+    
+    <!-- Table for displaying books -->
+    <table id="bookTable">
+      <thead>
+        <tr>
+          <th>Book Title</th>
+          <th>Author</th>
+          <th>Pages</th>
+          <th>Read</th>
+          <th>Remove</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- Book rows will be dynamically inserted here -->
+      </tbody>
+    </table>
+  
+    <!-- Modal for adding a new book -->
+    <dialog id="bookDialog">
+      <form id="bookForm">
+        <h2>Add a New Book</h2>
+        <div class="form-group">
+          <label for="title">Title:</label>
+          <input type="text" id="title" required>
+        </div>
+        <div class="form-group">
+          <label for="author">Author:</label>
+          <input type="text" id="author" required>
+        </div>
+        <div class="form-group">
+          <label for="pages">Pages:</label>
+          <input type="number" id="pages" required>
+        </div>
+        <div class="form-group">
+          <label for="read">Read:</label>
+          <select id="read">
+            <option value="Yes">Yes</option>
+            <option value="No">No</option>
+          </select>
+        </div>
+        <button type="submit">Add Book</button>
+        <button type="button" id="cancelBtn">Cancel</button>
+      </form>
+    </dialog>
     <script src="script.js" defer></script>
 </body>
 </html>
